# automatic-farm

./: .gitignore  main.py  readme.txt
4g_modem/: clear_sms_flag.sh  connect_modem.sh  decode_gsm7.js  delete_sms.sh  disconnect_modem.sh  encode_gsm7.js  get_modem_state.sh  get_sms.sh  send_sms.sh  support_gsm7.py
architecture/: protocol_flash_two_pag.txt
flash_tool/: blink_led_2.hex  flash-tool.py  hexControl.py  programmer.hex  tmp.txt
hardware/v1/: v1.dch  v1.dip
hardware/v2/: BOM_v2.csv  PickAndPlace_v2.csv
nrf24/application/: application.atsln  application.componentinfo.xml
nrf24/bootloader/: bootloader.componentinfo.xml
nrf24/radio/: nrf24Radio.c  (+2 more)
nrf24L01_code/: nrf24L01_code.atsln
nrf24leaf/: linker.txt
python_application/: alarms_module.py  battery_module.py  commands_module.py  gateway.py  gsm_module.py  log_module.py  nrf24_module.py  postdata_module.py  reboot_module.py  serial_module.py  support_gsm7.py  tmp.txt  util_module.py
software/: CMakeLists.txt  CheckArguments.cmake
software/application/: CMakeLists.txt
software/application/Abstractization/Actuators/Relay/: Relay.c  Relay.h
software/application/Abstractization/Actuators/Valve/: Valve.c  Valve.h
software/application/Abstractization/Sensors/Humidity/: Humidity.c  Humidity.h
software/application/Abstractization/Sensors/Light/: Light.c  Light.h
software/application/App/: Main.c
software/application/Communication/: Communication.c  Communication.h  fw_table.c  fw_table.h  messages.c  messages.h  network_common.h  network_def.c  radio_link.c  radio_link.h
software/application/Scheduler/: Scheduler.c  Scheduler.h
software/application/SwOta/: ota.c  ota.h
software/buildDir/: CMakeCache.txt  Makefile  cmake_install.cmake
software/buildDir/application/: Makefile  app.elf  app.hex  cmake_install.cmake
software/buildDir/firmware/: Makefile  cmake_install.cmake  firmware.elf  firmware.hex  firmware_eep.hex  nrf24.hex
software/buildDir/libraries/drivers/e2p/: Makefile  cmake_install.cmake
software/buildDir/libraries/drivers/flash/: Makefile  cmake_install.cmake
software/buildDir/libraries/drivers/spi/: Makefile  cmake_install.cmake
software/buildDir/libraries/drivers/timer/: Makefile  cmake_install.cmake
software/buildDir/libraries/drivers/uart/: Makefile  cmake_install.cmake
software/buildDir/libraries/drivers/wdg/: Makefile  cmake_install.cmake
software/buildDir/libraries/hardware/atmega328p/: Makefile  cmake_install.cmake
software/buildDir/libraries/modules/nrf24/: Makefile  cmake_install.cmake
software/buildDir/libraries/modules/system-timer/: Makefile  cmake_install.cmake
software/buildDir/programmer/: Makefile  cmake_install.cmake  programmer.elf  programmer.hex  programmer_ext.hex
software/buildDir/testing/oneWireDev_testbench/: Makefile  cmake_install.cmake  onewire_test.elf  onewire_test.hex
software/buildDir/testing/system_timer_testbench/: Makefile  cmake_install.cmake  system-timer_test.elf  system-timer_test.hex
software/buildDir/testing/timer_testbench/: Makefile  cmake_install.cmake  timer_test.elf  timer_test.hex
software/cmake_config/: generic-avr-gcc.cmake
software/firmware/: CMakeLists.txt
software/firmware/bootloader/: CMakeLists.txt
software/firmware/bootloader/inc/: E2P_Layout.h  GenericLib.h  WriteApp.h
software/firmware/bootloader/src/: WriteApp.c  main.c
software/libraries/: CMakeLists.txt
software/libraries/drivers/adc/: CMakeLists.txt
software/libraries/drivers/e2p/: CMakeLists.txt
software/libraries/drivers/e2p/inc/: e2p.h
software/libraries/drivers/e2p/src/: e2p.c
software/libraries/drivers/flash/: CMakeLists.txt
software/libraries/drivers/flash/inc/: flash.h
software/libraries/drivers/flash/src/: flash.c
software/libraries/drivers/nrf24/: CMakeLists.txt
software/libraries/drivers/nrf24/inc/: nRF24L01.h  nrf24Radio.h
software/libraries/drivers/nrf24/src/: nrf24Radio.c  nrf24Radio_shared.c
software/libraries/drivers/spi/: CMakeLists.txt
software/libraries/drivers/spi/inc/: spi.h
software/libraries/drivers/spi/src/: spi.c
software/libraries/drivers/timer/: CMakeLists.txt
software/libraries/drivers/timer/inc/: timer.h
software/libraries/drivers/timer/src/: timer.c
software/libraries/drivers/uart/: CMakeLists.txt
software/libraries/drivers/uart/inc/: uart.h
software/libraries/drivers/uart/src/: uart.c
software/libraries/drivers/wdg/: CMakeLists.txt
software/libraries/drivers/wdg/inc/: wdg.h
software/libraries/drivers/wdg/src/: wdg.c
software/libraries/hardware/atmega16/: CMakeLists.txt  e2p_layout.h  e2p_layout.h.in  flash_layout.h  flash_layout.h.in  interrupt_hw.h  nrf24_hw.h  spi_hw.h  timer_hw.h  uart_hw.h  wdg_hw.h
software/libraries/hardware/atmega328p/: CMakeLists.txt  e2p_layout.h  e2p_layout.h.in  flash_layout.h  flash_layout.h.in  interrupt_hw.h  nrf24_hw.h  spi_hw.h  timer_hw.h  uart_hw.h  wdg_hw.h
software/libraries/modules/LowPower/: CMakeLists.txt
software/libraries/modules/LowPower/inc/: lowpower.h
software/libraries/modules/LowPower/src/: lowpower.c
software/libraries/modules/ds18b20/: CMakeLists.txt
software/libraries/modules/ds18b20/inc/: ds18b20.h
software/libraries/modules/ds18b20/src/: ds18b20.c
software/libraries/modules/nrf24/: CMakeLists.txt
software/libraries/modules/nrf24/inc/: nRF24L01.h  nrf24Radio.h  nrf24Radio_API.h
software/libraries/modules/nrf24/src/: nrf24Radio.c  nrf24Radio_shared.c
software/libraries/modules/system-timer/: CMakeLists.txt
software/libraries/modules/system-timer/inc/: system-timer.h
software/libraries/modules/system-timer/src/: system-timer.c
software/programmer/: CMakeLists.txt
software/programmer/src/: main.c
software/testing/aes_testbench/: CMakeLists.txt  aes_test.c
software/testing/oneWireDev_testbench/: CMakeLists.txt  main.c  onewire.h
software/testing/system_timer_testbench/: CMakeLists.txt  system-timer_test.c
software/testing/timer_testbench/: CMakeLists.txt  timer_test.c
tools/: PL2303_64bit_Installer.rar  avrdude.rar  avrdude_6_3.rar  set_avr_func.sh  set_toolchain.sh
(+92 files in other folders)
